--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -7,5 +7,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('build/js/index.js') }}"></script>
+    {{ encore_entry_script_tags('index') }}
 {% endblock %}
